# envoy-proto-rs

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/envoy-proto/: Cargo.toml
crates/envoy-proto/src/: lib.rs
crates/envoy-proto/tests/: smoke.rs
xtask/: Cargo.toml
xtask/src/: main.rs
