[package]
name = "envoy-proto"
version = "0.1.0-dev"
edition = "2021"
license = "Apache-2.0"
description = "Rust protobuf and gRPC bindings for the Envoy data-plane-api"
repository = "https://github.com/phlax/envoy-proto-rs"
readme = "../../README.md"
keywords = ["envoy", "protobuf", "grpc", "proxy", "xds"]
categories = ["api-bindings", "network-programming"]
build = false

[lib]
doctest = false

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }
